--- a/src/components/TempToggle/tempToggle.module.css
+++ b/src/components/TempToggle/tempToggle.module.css
@@ -1,6 +1,7 @@
 .fahrenheitHidden {
   opacity: 0;
 }
+
 .celsiusLabel {
   position: absolute;
   left: 6px;
@@ -12,6 +13,7 @@
   pointer-events: none;
   z-index: 1;
 }
+
 .fahrenheitLabel {
   display: flex;
   align-items: center;
@@ -25,9 +27,11 @@
   z-index: 2;
   transition: opacity 100ms cubic-bezier(0.4,0,0.2,1);
 }
+
 .switch {
   display: inline-block;
 }
+
 .switchButton {
   background: #ddd;
   border: 2px solid #2685BD;
@@ -40,16 +44,33 @@
   width: 56px;
   height: 30px;
   transition: all 150ms ease-in-out;
+  outline: none;
 }
+
+.switchButton:focus-visible {
+  outline: 3px solid #0a4c7b;
+  outline-offset: 2px;
+  box-shadow: 0 0 0 4px #b3d8f6;
+}
+
+.switchButton:active {
+  background: #2685BD;
+  border-color: #176093;
+}
+
+.switchButton:hover {
+  background: #176093;
+  border-color: #176093;
+}
+
 .on {
   background: #2685BD;
 }
+
 .off {
   background: #fff;
 }
-.switchButton:focus {
-  outline: 2px solid #3333ff33;
-}
+
 .track {
   position: relative;
   width: 48px;
@@ -57,6 +78,7 @@
   border-radius: 999px;
   background: transparent;
 }
+
 .knob {
   position: absolute;
   top: 2px;
@@ -71,12 +93,15 @@
   align-items: center;
   justify-content: center;
 }
+
 .knobOn {
   transform: translateX(24px);
 }
+
 .knobOff {
   transform: translateX(0);
 }
+
 .visuallyHidden {
   position: absolute !important;
   width: 1px;
